; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_btree.c_clearpair.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_btree.c_clearpair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btree_geo = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btree_geo*, i64*, i32)* @clearpair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clearpair(%struct.btree_geo* %0, i64* %1, i32 %2) #0 {
  %4 = alloca %struct.btree_geo*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store %struct.btree_geo* %0, %struct.btree_geo** %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.btree_geo*, %struct.btree_geo** %4, align 8
  %8 = load i64*, i64** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @bkey(%struct.btree_geo* %7, i64* %8, i32 %9)
  %11 = load %struct.btree_geo*, %struct.btree_geo** %4, align 8
  %12 = getelementptr inbounds %struct.btree_geo, %struct.btree_geo* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @longset(i32 %10, i32 0, i32 %13)
  %15 = load i64*, i64** %5, align 8
  %16 = load %struct.btree_geo*, %struct.btree_geo** %4, align 8
  %17 = getelementptr inbounds %struct.btree_geo, %struct.btree_geo* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %6, align 4
  %20 = add nsw i32 %18, %19
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i64, i64* %15, i64 %21
  store i64 0, i64* %22, align 8
  ret void
}

declare dso_local i32 @longset(i32, i32, i32) #1

declare dso_local i32 @bkey(%struct.btree_geo*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
